--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"/*.{ts,tsx,md}\"",
-    "start-user-app": "npm run dev",
-    "db:generate":"cd packages/db && npx prisma generate "
+     "db:generate":"cd packages/db && npx prisma generate && cd ../..",
+    "start-user-app": "npm run dev"
+  
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
