--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,6 +1,9 @@
 {
     "name": "@repo/db",
-    "version": "0.0.0",
+    "version": "0.0.0", 
+    "script":{
+        "build":"npx prisma generate"
+    },
     "dependencies": {
         "@prisma/client": "^5.11.0"
     },
