--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"/*.{ts,tsx,md}\"",
-     "db:generate":"cd packages/db && npx prisma generate && cd ../..",
+     "db:generate":"cd packages/db && npm run dev && cd ../..",
     "start-user-app": "npm run dev"
   
   },
